2009-12-08  Ivan Maidanski <ivmai@mail.ru>

	* tests/test.c (reverse_test): Comment out a check for MSWIN32
	(when determing BIG value) assuming outdated win32S.
	* tests/test.c (reverse_test): Rename to reverse_test_inner;
	change the declaration (to be of GC_fn_type); call itself thru
	GC_call_with_gc_active() if the argument is zero.
	* tests/test.c (reverse_test): New function added calling
	reverse_test_inner thru GC_do_blocking (to test GC_do_blocking and
	GC_call_with_gc_active).

2009-12-08  Ivan Maidanski <ivmai@mail.ru> (with input from Marcos Dione)

	* doc/README.macros (IGNORE_DYNAMIC_LOADING, PLATFORM_ANDROID):
	Document.
	* dyn_load.c: Don't include <elf.h> if PLATFORM_ANDROID.
	* dyn_load.c: Include bionic <linker.h> (instead of <link.h>) if
	PLATFORM_ANDROID.
	* include/private/gcconfig.h (LINUX): Define also if
	PLATFORM_ANDROID (for the windows-based toolkit).
	* include/private/gcconfig.h (SEARCH_FOR_DATA_START): Explicitly
	define for Android/x86 platform.
	* include/private/gcconfig.h (IGNORE_DYNAMIC_LOADING): Recognize
	new macro (undefine DYNAMIC_LOADING in this case).
	* include/private/gcconfig.h (CANCEL_SAFE): Don't define if
	PLATFORM_ANDROID.
	* include/private/gcconfig.h (IF_CANCEL): Fix definition for the
	explicitly defined CANCEL_SAFE.

2009-12-08  Ivan Maidanski <ivmai@mail.ru>

	* allchblk.c (GC_allochblk_nth): Don't call GC_remove_protection()
	if GC_DISABLE_INCREMENTAL.
	* reclaim.c (GC_reclaim_generic): Ditto.
	* checksums.c (GC_page_was_ever_dirty): Add prototype.
	* include/private/gc_locks.h (GC_mark_lock_holder): Don't declare
	unless PARALLEL_MARK.
	* include/private/gc_priv.h (GC_dirty_maintained,
	GC_page_was_dirty, GC_remove_protection, GC_dirty_init): Don't
	declare if GC_DISABLE_INCREMENTAL.
	* include/private/gc_priv.h (GC_print_finalization_stats): Don't
	declare if SMALL_CONFIG.
	* include/private/gcconfig.h (CHECKSUMS): Explicitly undefine if
	GC_DISABLE_INCREMENTAL (since nothing to check).